[gd_scene load_steps=3 format=2]

[ext_resource path="res://mobs/Mob.tscn" type="PackedScene" id=1]
[ext_resource path="res://mobs/client/Client.gd" type="Script" id=2]

[node name="Client" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Shape" parent="." index="0"]
position = Vector2( -2, 1 )

[node name="LowerBody" parent="." index="2"]
animation = "moving"

[node name="UpperBody" parent="." index="3"]
animation = "moving"
frame = 3

[node name="Timer" type="Timer" parent="." index="5"]
wait_time = 3.0

[connection signal="input_event" from="." to="." method="_on_Client_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Client_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Client_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
